# singtown-ai-trainer-ultralytics

./: .gitignore  Dockerfile  README.md  mock-task.json  object-detection-20.json  object-detection-2000.json  run.sh
.github/workflows/: docker.yml
singtown-ai-trainer-ultralytics/: main.py  openmv_yolov8n.py  pyproject.toml
