[project]
name = "singtown-ai-trainer-ultralytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-edge-litert>=1.2.0",
    "onnx>=1.12.0,<2.0.0",
    "onnx-graphsurgeon>=0.3.26",
    "onnx2tf>=1.26.3,<1.29.0",
    "onnxruntime>=1.24.3",
    "onnxslim>=0.1.71",
    "singtown-ai>=1.10.1",
    "sng4onnx>=1.0.1",
    "tensorflow>=2.0.0,<=2.19.0",
    "tf-keras<=2.19.0",
    "torch",
    "torchvision",
    "ultralytics>=8.4.22",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
